--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "cross-env": "^7.0.3",
+    "eslint": "^7.18.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-svelte3": "^3.0.0",
     "jest": "^26.6.3",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
