--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "rollup -c -w",
     "start": "sirv public",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "style": "prettier --check .",
+    "style:fix": "prettier --write ."
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -17,6 +19,8 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-svelte3": "^3.0.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
