--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "eslint": "^7.18.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-svelte3": "^3.0.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
     "rollup": "^2.3.4",
@@ -30,5 +32,14 @@
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,svelte}": "eslint --cache --fix",
+    "*.{js,css,md,svelte}": "prettier --write"
   }
 }
