--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
   },
   "lint-staged": {
     "*.{js,svelte}": "eslint --cache --fix",
-    "*.{js,css,md,svelte}": "prettier --write"
+    "*.{js,css,md,svelte,yml,json}": "prettier --write"
   }
 }
