--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "start": "sirv public",
     "test": "jest",
     "test:watch": "npm test -- --watch",
-    "test:all": "npm run lint && npm run style && npm test",
+    "test:all": "npm run validate && npm run lint && npm run style && npm test",
     "lint": "eslint .",
     "style": "prettier --check .",
-    "style:fix": "prettier --write ."
+    "style:fix": "prettier --write .",
+    "validate": "svelte-check"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/svelte": "^3.0.3",
+    "@tsconfig/svelte": "^1.0.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
@@ -34,7 +37,11 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
-    "svelte-jester": "^1.3.0"
+    "svelte-check": "^1.0.0",
+    "svelte-jester": "^1.3.0",
+    "svelte-preprocess": "^4.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.0.0"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
