--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-svelte3": "^3.0.0",
+    "eslint-plugin-svelte3": "^3.1.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
@@ -52,7 +54,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,svelte}": "eslint --cache --fix",
-    "*.{js,css,md,svelte,yml,json}": "prettier --write"
+    "*.{js,ts,svelte}": "eslint --cache --fix",
+    "*.{js,ts,css,md,svelte,yml,json}": "prettier --write"
   }
 }
