--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,9 @@
   "extends": "@tsconfig/svelte/tsconfig.json",
 
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
+  "compilerOptions": {
+    "types": ["jest", "@testing-library/jest-dom"],
+    "lib": ["es2019", "DOM"]
+  }
 }
