--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint .",
     "style": "prettier --check .",
     "style:fix": "prettier --write .",
-    "validate": "svelte-check"
+    "validate": "svelte-check",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
@@ -29,7 +30,7 @@
     "eslint": "^7.24.0",
     "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-svelte3": "^3.1.2",
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -48,11 +49,6 @@
   },
   "dependencies": {
     "sirv-cli": "^1.0.11"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts,svelte}": "eslint --cache --fix",
